    rename dialog name selection UTF-8 compliant #127
    replace G_VALUE_INIT macro #126
    added file list Edit|Select By Pattern
    adjust parse url
    Show Output option should open on additional output after closure
    Remove Text Type Association popup note
    display file sizes and times in overwrite query
    file change detection blacklist non-block nfs fuse cifs smbfs ftpfs
0.7.10  2012-07-25:
    added sort options #87 #37 #23
    completed russian translation ru.po
    smart size display for free space and tasks closes #115
    case insensitive sort detect all created files #119
    fix Skip All in overwrite query
    added configure option --disable-pixmaps to install icons to share/icons
    new icons for faenza theme by Goran Simovic
    G_VALUE_INIT undefined #126
    allow file change detection on aufs and devtmpfs
0.7.9   2012-07-13:
    new threading for tasks
    network filesystem lag issues improved
    no file change detection on non-block filesystems
    timeout size calc after 5 sec
    don't calc total size of files to delete for speed improvement
    close copy read file on error
    handle progress gt 100%
    remove deadlock on quick dir change
    tforsman new swedish translation partially completed (40%)
    jpfleury updated french translation
    task manager Path column renamed Folder
    ellipsize Folder, Item, To task manager columns
    always enable Root submenu in devices
    set font new/rename file dialogs Target Template entries
    give errors accessing directories
    verbose tar extract/create
    fix for urxvtc #106
    check non-zero size before thumbnail scale (pixbuf in #107)
    run update-desktop-database; mime docs
0.7.8   2012-06-16:
    use/update mimeapps.list over defaults.list closes #71
    added design mode on mime apps opens MIME menu
    deprecated MimeType x-directory removed from spacefm desktop files
    new archive save dialog uses literal filename and extension fixes #82